# rpgp-py

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: main.yml
src/: api.rs  builder.rs  conversions.rs  hierarchy.rs  info.rs  keys.rs  lib.rs  messages.rs  packets.rs
src/openpgp/: __init__.py  _openpgp.pyi
tests/: test_key_generation.py  test_openpgp.py
tests/fixtures/multi-object-deserialization/: detached-signatures.asc  detached-signatures.pgp  public-keys.asc  public-keys.pgp  secret-keys.asc  secret-keys.pgp
