[package]
name = "rpgp-py"
version = "0.19.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_openpgp"
crate-type = ["cdylib"]

[dependencies]
pgp = "0.19.0"
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
rand = "0.8"
rsa = "0.9.10"
smallvec = "1"

[features]
extension-module = ["pyo3/extension-module"]
